--- a/client/fields.jade
+++ b/client/fields.jade
@@ -78,8 +78,10 @@ template(name='icon_view')
 
 template(name='i')
     img(src="https://img.icons8.com/color/48/000000/#{name}.png" class=classes title=title)
-    //- img(src="https://img.icons8.com/office/48/000000/#{name}.png" class=classes title=title)
-    //- img(src="https://img.icons8.com/ios/48/000000/#{name}.png" class=classes title=title)
+template(name='ioffice')
+    img(src="https://img.icons8.com/office/48/000000/#{name}.png" class=classes title=title)
+template(name='iios')
+    img(src="https://img.icons8.com/ios/48/000000/#{name}.png" class=classes title=title)
     //- img(src="https://img.icons8.com/ultraviolet/48/000000/#{name}.png" class=classes title=title)
 
 template(name='ismall')
@@ -95,8 +97,8 @@ template(name='iblue')
 template(name='iflat')
     img.ui.mini.image(src="https://img.icons8.com/flat_round/64/000000/#{name}.png")
 
-template(name='ioffice')
-    img.ui.image(src="https://img.icons8.com/office/30/000000/#{name}.png" class=classes)
+//- template(name='ioffice')
+//-     img.ui.image(src="https://img.icons8.com/office/30/000000/#{name}.png" class=classes)
 
 template(name='link_edit')
     div
