--- a/client/users.jade
+++ b/client/users.jade
@@ -128,14 +128,15 @@ template(name='owner')
             a(href="/user/#{username}/")
                 h2.ui.center.aligned.header #{first_name} #{last_name} 
                 .ui.small.header @#{username}
-            +text_view key='first_name' label='first name' direct=true
-            +text_view key='last_name' label='last name' direct=true
-            +text_view key='address' label='address' direct=true
-            +number_view key='unit_number' label='Unit #' direct=true
-            +number_view key='building_number' label='building #' direct=true
-            +text_view key='email' label='email' direct=true
-            +phone_view key='phone' label='phone' direct=true
-            +date_view key='start_date' label='start date' direct=true
-            +date_view key='expiration_date' label='expiration date' direct=true
-            +array_view key='roles' label='roles' direct=true
-            
+            //- +text_view key='address' label='address' direct=true
+            //- +number_view key='unit_number' label='Unit #' direct=true
+            //- +number_view key='building_number' label='building #' direct=true
+            //- +text_view key='email' label='email' direct=true
+            //- +phone_view key='phone' label='phone' direct=true
+            //- +array_view key='roles' label='roles' direct=true
+            .ui.small.inline.header roles
+            each roles
+                .ui.small.basic.label #{this}
+            if currentUser
+                +user_connect_button
+                
