--- a/components/profile/user_edit.jade
+++ b/components/profile/user_edit.jade
@@ -1,6 +1,6 @@
 template(name='user_edit')
     with user_from_username_param          
-        //- img.ui.fluid.image.banner_image(src="{{c.url banner_image_id width=1000 height=500 crop='crop'}}")    
+        img.ui.fluid.image.checkin_banner(src="{{c.url banner_image_id width=1000 height=500 crop='crop'}}")    
         .ui.stackable.padded.grid
             .three.column.row
                 .column
@@ -16,7 +16,7 @@ template(name='user_edit')
                         +image_edit key='kiosk_photo' icon='picture' title='profile image' direct=true
                     else
                         +image_edit key='profile_image_id' icon='picture' title='profile image' direct=true
-                    if is_admin
+                    if is_current_user
                         +password_edit
                         //- +phone_editor
                         +username_edit
@@ -45,10 +45,13 @@ template(name='user_edit')
                             else
                                 +text_view key='first_name' label='first name' direct=true
                                 +text_view key='last_name' label='last name' direct=true
+                                div
                                 +number_view key='building_number' label='building #' direct=true
                                 //- +text_view key='building_code' label='building code' direct=true
+                                div
                                 +boolean_edit key='profile_published' label='publish profile' direct=true
                         //- +text_edit key='email' label='email' direct=true
+                        div
                         +phone_edit key='phone' label='phone' icon='phone' direct=true
                         +array_edit key='tags' label='tags' direct=true
                         +image_edit key='banner_image_id' label='banner image' direct=true
