v1 project files crud

--- a/client/buttons.jade
+++ b/client/buttons.jade
@@ -3,11 +3,11 @@ template(name='session_edit_button')
         unless is_editing
             .edit_this.ui.blue.small.button(title="Edit #{tags}" class=button_classes)
                 i.pencil.icon
-                |Edit
+                |edit
         else
             .save_doc.ui.green.button(class=button_classes)
                 i.check.icon
-                |Save
+                |save
 
 
 template(name='detect')
