--- a/components/projects.jade
+++ b/components/projects.jade
@@ -98,8 +98,8 @@ template(name='project_update_small')
 template(name='project_edit')
     with current_doc
         .ui.stackable.padded.grid
-            .row
-                .four.wide.column 
+            .three.column.row
+                .wide.column 
                     .ui.header 
                         i.pencil.icon
                         |edit project
@@ -113,11 +113,18 @@ template(name='project_edit')
                     +remove_button
                     +icon_edit key='icon' label='icon' direct=true
                     +array_edit key='tags' label='tags' icon='tags' direct=true
-                .twelve.wide.column 
+                .column 
                     +text_edit key='title' label='title' icon='title' direct=true
                     +image_edit key='image' label='image' icon='image' direct=true
                     +html_edit key='description' label='description' icon='content' direct=true
-                    +activity
+                .column 
+                    +date_edit key='start_date' label='start date' direct=true
+                    +date_edit key='end_date_proposed' label='end date (proposed)' direct=true
+                    +date_edit key='end_date_actual' label='end date (actual)' direct=true
+                    +number_edit key='budget' label='budget' direct=true
+                    +number_edit key='end_cost' label='end cost' direct=true
+                    +boolean_edit key='contract' label='contract ?' direct=true
+                    
                      
 template(name='project_view')
     with current_doc
@@ -134,28 +141,91 @@ template(name='project_view')
                         i.pencil.icon
             .row
                 .four.wide.column 
+                    +date_view key='start_date' label='start date' direct=true
+                    +date_view key='end_date_proposed' label='end date (proposed)' direct=true
+                    +date_view key='end_date_actual' label='end date (actual)' direct=true
+                    +number_view key='budget' label='budget' direct=true
+                    +number_view key='end_cost' label='end cost' direct=true
+                    +boolean_view key='contract' label='contract ?' direct=true
                     +array_view key='tags' label='tags' icon='tags' direct=true
                     +html_view key='description' icon='content' label='description' direct=true
                     +image_view key='image' icon='image' label='image' direct=true
                     +voting_full
+                    .ui.small.header #{views} views
                     +viewing
+                    +project_files
                 .six.wide.column 
-                    .ui.header 
-                        +i name='rss'
-                        |activity
                     +activity
                 .six.wide.column 
+                    +project_change_orders
                     +project_finance
                     +project_photos
                     +comments
 
 
+template(name='project_files')
+    .ui.header 
+        +i name='file'
+        | documents
+    .ui.icon.button.add_file
+        i.plus.icon
+    .ui.link.list
+        each files
+            if is_editing
+                +text_edit key='title' direct=true
+                +pdf_edit key='pdf' direct=true
+                +date_edit key='file_date' direct=true
+                +array_edit key='tags' direct=true
+                +session_edit_icon
+                +remove_button
+            else
+                .item 
+                    .header #{title}
+                    .content
+                        each tags
+                            .ui.small.label #{this}
+                        |#{file_date}
+                        +session_edit_icon
+    
+    
+template(name='project_change_orders')
+    .ui.header 
+        +i name='change'
+        | change orders
+    .ui.small.header budget
+    .ui.small.header expenses
+    
+    
 template(name='project_finance')
     .ui.header 
         +i name='money'
         |finance
     .ui.small.header budget
     .ui.small.header expenses
+    div
+    +ismall name='invoice' classes='ui middle aligned image'
+    .ui.inline.header
+        |payments 
+    .ui.small.icon.button.add_payment
+        i.plus.icon
+    .ui.list
+        each payments
+            if is_editing
+                +text_edit key='recipient' direct=true
+                +float_edit key='amount' direct=true
+                +date_edit key='payment_date' direct=true
+                +session_edit_icon
+                +remove_button
+            else
+                .item 
+                    .content #{recipient} $#{amount} #{payment_date}
+                        +session_edit_icon
+    div
+    .ui.inline.header
+        |totals
+    i.circular.refresh.icon(title='refresh')
+    with current_doc
+        |$#{payment_total}
 
 template(name='project_photos')
     .ui.header 
@@ -165,6 +235,9 @@ template(name='project_photos')
 
 
 template(name='activity')
+    .ui.inline.header 
+        +i name='rss'
+        |activity    
     .ui.button.add_update
         i.plus.icon
         |update
@@ -181,7 +254,7 @@ template(name='activity')
                     | {{ med_date update_date }}
                     .extra.text !{text}
                     .meta
-                        +voting
+                        +voting_small
 
 
 
