--- a/client/resident_portal.jade
+++ b/client/resident_portal.jade
@@ -3,7 +3,7 @@ template(name='resident_portal')
     .ui.padded.stackable.grid
         .three.column.row
             .column
-                +i name='dashboard' classes='ui inline image'
+                +i name='home' classes='ui inline image'
                 .ui.inline.header
                     | resident portal
         .four.column.row
