--- a/client/fields.jade
+++ b/client/fields.jade
@@ -47,7 +47,7 @@ template(name='color_icon_edit')
 template(name='icon_edit')
     div
     if icon
-        +ismall name=icon
+        +ismall name=icon classes='ui middle aligned image'
     .ui.inline.header
         if title
             |#{title}
@@ -77,7 +77,7 @@ template(name='icon_view')
 
 
 template(name='i')
-    img(src="https://img.icons8.com/color/48/000000/#{name}.png" class=classes title=title)
+    img(src="https://img.icons8.com/office/48/000000/#{name}.png" class=classes title=title)
 template(name='ioffice')
     img(src="https://img.icons8.com/office/48/000000/#{name}.png" class=classes title=title)
 template(name='iios')
@@ -114,7 +114,7 @@ template(name='link_view')
     if field_value
         div
         if icon
-            +ismall name=icon
+            +ismall name=icon classes='ui middle aligned image'
         .ui.inline.header 
             |#{title}
         a(href=field_value target='_window') #{field_value}
@@ -190,7 +190,7 @@ template(name='pdf_view')
 template(name='image_edit')
     .ui.form
         if icon
-            +ismall name=icon
+            +ismall name=icon classes='ui middle aligned image'
         .ui.inline.header
             if title
                 |#{title}
@@ -249,7 +249,7 @@ template(name='textarea_edit')
         .field
             label 
                 if icon
-                    +ismall name=icon
+                    +ismall name=icon classes='ui middle aligned image'
                 if title
                     |#{title}
                 else if label
@@ -268,7 +268,7 @@ template(name='html_edit')
         .field
             label 
                 if icon
-                    +ismall name=icon
+                    +ismall name=icon classes='ui middle aligned image'
                 if title
                     |#{title}
                 else if label
@@ -336,7 +336,7 @@ template(name='document_view')
         
 template(name='text_edit')
     if icon
-        +ismall name=icon
+        +ismall name=icon classes='ui middle aligned image'
     .ui.inline.header
         if title
             |#{title}
@@ -351,7 +351,7 @@ template(name='text_edit')
 
 template(name='slug_edit')
     if icon
-        +ismall name=icon
+        +ismall name=icon classes='ui middle aligned image'
     .ui.inline.header.pointer.slugify_title
         if title
             |#{title}
@@ -416,7 +416,7 @@ template(name='parent_edit')
         .ui.inline.header
             |parent edit
             if icon
-                +ismall name=icon
+                +ismall name=icon classes='ui middle aligned image'
             if title
                 |#{title}
             else if label
@@ -487,7 +487,7 @@ template(name='phone_view')
 template(name='number_edit')
     div
     if icon
-        +ismall name=icon
+        +ismall name=icon classes='ui middle aligned image'
         //- i.grey.icon(class=icon)
     .ui.inline.header(title=tip)
         if title
@@ -575,7 +575,7 @@ template(name='date_view')
     if field_value
         div
         if icon
-            +ismall name=icon
+            +ismall name=icon classes='ui middle aligned image'
         .ui.inline.header
             if title
                 |#{title}
@@ -653,7 +653,7 @@ template(name='datetime_view')
 template(name='array_edit')
     div
     if icon
-        +ismall name=icon
+        +ismall name=icon classes='ui middle aligned image'
     .ui.inline.header
         if title
             |#{title}
@@ -675,7 +675,7 @@ template(name='array_view')
     if field_value
         div
         if icon
-            +ismall name=icon
+            +ismall name=icon classes='ui middle aligned image'
         //- .ui.inline.header
         //-     if title
         //-         |#{title}
@@ -828,7 +828,7 @@ template(name='signature_view')
 template(name='boolean_edit')
     div
     if icon
-        +ismall name=icon
+        +ismall name=icon classes='ui middle aligned image'
     .ui.inline.header
         if title
             |#{title}
@@ -880,7 +880,7 @@ template(name='single_doc_view')
             |#{title}
         .ui.basic.label
             if icon
-                +ismall name=icon
+                +ismall name=icon classes='ui middle aligned image'
             |#{field_value}
 
 
@@ -893,7 +893,7 @@ template(name='single_doc_edit')
     each choices
         .ui.circular.compact.button.select_choice(class=choice_class)
             if icon
-                +ismall name=icon
+                +ismall name=icon classes='ui middle aligned image'
                 //- +i name=icon classes='ui mini inline image'
             |#{calculated_label}
             |#{slug}
@@ -1166,7 +1166,7 @@ template(name='project_lookup')
             .ui.middle.aligned.selection.animated.list
                 each doc_results
                     .select_doc.item
-                        +ismall name=icon
+                        +ismall name=icon classes='ui middle aligned image'
                         .ui.inline.header
                             strong #{title}
                         div
